tests/paczka1/fuzzy1/87733428.err
Error in line 1: 20S0w A167 90,8
Error in line 7: S349 S349 98,4
Error in line 4: mAdp S308 86,5
Error in line 26: dYZf6OET2T A167 80,4
Error in line 28: fR65Exj S308 47,9
